--- a/protocolo/capitulos/actividades.tex
+++ b/protocolo/capitulos/actividades.tex
@@ -1,65 +1,66 @@
 \section{Programa de Actividades}
-Las actividades, con sus tiempos respectivos, para llevar a cabo este proyecto se encuentran detalladas en el Cuadro \ref{actividades}.
+Las actividades, con sus tiempos respectivos, para llevar a cabo este proyecto se encuentran detalladas en el Cuadro 1.
 
 \begin{table}[ht]
-	\label{actividades}
+	\label{tbl:actividades}
     \centering
-\resizebox*{!}{17 cm}{
-\begin{tabular}{|p{8cm}|c|c|c|c|c|c|c|c|c|c|}
-	\hline 
-	ACTIVIDAD&\rotatebox{90}{Febrero 2021}
-	&\rotatebox{90}{Marzo}
-	&\rotatebox{90}{Abril} 
-    &\rotatebox{90}{Mayo} 
-    &\rotatebox{90}{Junio} 
-    &\rotatebox{90}{Julio} 
-    &\rotatebox{90}{Agosto} 
-    &\rotatebox{90}{Septiembre} 
-    &\rotatebox{90}{Octubre} 
-    &\rotatebox{90}{Noviembre 2021}\\
-	\hline
-	Revisión de la Literatura&\checkmark &\checkmark  &\checkmark  &  &  &  &  &  & &  \\  
-	\hline
-	Protocolo&\checkmark &\checkmark  &\checkmark  &  &  &  &  &  & &  \\  
-	\hline 
-	Selección de software existente&\checkmark &\checkmark  &  &  &  &  &  &  & &  \\  
-	\hline 
-	Selección de hardware existente&\checkmark &\checkmark  &  &  &  &  &  &  & &  \\  
-	\hline 
-	Documentación de propuesta&  &  & \checkmark & \checkmark &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  \\ 
-	\hline 
-	Diseño de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
-	\hline 
-	Desarrollo de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
-	\hline 
-	Pruebas de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
-	\hline 
-	Implementación de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
-	\hline 
-	Desarrollo del API REST de la computadora central&  &  &  &  & \checkmark  &  &  &  &  &  \\ 
-	\hline 
-	Pruebas del API REST de la computadora central&  &  &  &  & \checkmark  &  &  &  &  &  \\ 
-	\hline 
-	Implementación del API REST de la computadora central&  &  &  &  & \checkmark  &  &  &  &  &  \\ 
-	\hline 
-	Desarrollo del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
-	\hline 
-	Pruebas del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
-	\hline 
-	Implementación del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
-	\hline 
-	Investigación y aprendizaje sobre Lógica difusa&  &  &  & \checkmark &\checkmark  &\checkmark  &  &  &  & \\ 
-	\hline 
-	Formulación de semántica para razonamiento difuso&  &  &  &  &  &\checkmark  &  &  &  &  \\ 
-	\hline 
-	Automatización del control mediante técnicas de lógica difusa&  &  &  &  &  &  &  \checkmark & \checkmark &  &  \\ 
-	\hline  
-	Diseño de aplicación web para monitorear y controlar el invernadero de forma remota&  &  &  &  &  &  &  &  & \checkmark  &  \\ 
-	\hline  
-	Desarrollo de aplicación web para monitorear y controlar el invernadero de forma remota&  &  &  &  &  &  &  &  & \checkmark &  \\ 
-	\hline  
-	Presentación y defensa de trabajo&  &  &  &  &  &  &  &  &  & \checkmark  \\ 
-	\hline
-\end{tabular}}
-    \caption{Actividades a diez meses}
+	\resizebox*{!}{17 cm}{
+		\begin{tabular}{|p{8cm}|c|c|c|c|c|c|c|c|c|c|}
+			\hline 
+			ACTIVIDAD&\rotatebox{90}{Febrero 2021}
+			&\rotatebox{90}{Marzo}
+			&\rotatebox{90}{Abril} 
+			&\rotatebox{90}{Mayo} 
+			&\rotatebox{90}{Junio} 
+			&\rotatebox{90}{Julio} 
+			&\rotatebox{90}{Agosto} 
+			&\rotatebox{90}{Septiembre} 
+			&\rotatebox{90}{Octubre} 
+			&\rotatebox{90}{Noviembre 2021}\\
+			\hline
+			Revisión de la Literatura&\checkmark &\checkmark  &\checkmark  &  &  &  &  &  & &  \\  
+			\hline
+			Protocolo&\checkmark &\checkmark  &\checkmark  &  &  &  &  &  & &  \\  
+			\hline 
+			Selección de software existente&\checkmark &\checkmark  &  &  &  &  &  &  & &  \\  
+			\hline 
+			Selección de hardware existente&\checkmark &\checkmark  &  &  &  &  &  &  & &  \\  
+			\hline 
+			Documentación de propuesta&  &  & \checkmark & \checkmark &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  \\ 
+			\hline 
+			Diseño de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
+			\hline 
+			Desarrollo de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
+			\hline 
+			Pruebas de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
+			\hline 
+			Implementación de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
+			\hline 
+			Desarrollo del API REST de la computadora central&  &  &  &  & \checkmark  &  &  &  &  &  \\ 
+			\hline 
+			Pruebas del API REST de la computadora central&  &  &  &  & \checkmark  &  &  &  &  &  \\ 
+			\hline 
+			Implementación del API REST de la computadora central&  &  &  &  & \checkmark  &  &  &  &  &  \\ 
+			\hline 
+			Desarrollo del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
+			\hline 
+			Pruebas del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
+			\hline 
+			Implementación del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
+			\hline 
+			Investigación y aprendizaje sobre Lógica difusa&  &  &  & \checkmark &\checkmark  &\checkmark  &  &  &  & \\ 
+			\hline 
+			Formulación de semántica para razonamiento difuso&  &  &  &  &  &\checkmark  &  &  &  &  \\ 
+			\hline 
+			Automatización del control mediante técnicas de lógica difusa&  &  &  &  &  &  &  \checkmark & \checkmark &  &  \\ 
+			\hline  
+			Diseño de aplicación web para monitorear y controlar el invernadero de forma remota&  &  &  &  &  &  &  &  & \checkmark  &  \\ 
+			\hline  
+			Desarrollo de aplicación web para monitorear y controlar el invernadero de forma remota&  &  &  &  &  &  &  &  & \checkmark &  \\ 
+			\hline  
+			Presentación y defensa de trabajo&  &  &  &  &  &  &  &  &  & \checkmark  \\ 
+			\hline
+		\end{tabular}
+	}
+	\caption{Actividades a diez meses}
 \end{table}
