--- a/protocolo/capitulos/alcance.tex
+++ b/protocolo/capitulos/alcance.tex
@@ -2,9 +2,9 @@
 
 \subsection*{Alcances}
 \begin{itemize}
-    \item El sistema solo monitoreará 4 variables dentro de un invernadero: temperatura ambiental, humedad del suelo, humedad ambiental e intensidad de la luz.
+    \item El sistema monitoreará 4 variables dentro de un invernadero: temperatura ambiental, humedad del suelo, humedad ambiental e intensidad de la luz.
     \item Se controlará el riego del mismo utilizando una válvula de solenoide y el clima a través de abanicos y aspersores de niebla utilizando técnicas de lógica difusa. 
-    \item Los datos históricos sobre las mediciones solo podrán ser consultados a través de la interfaz web y esta no será multi usuario.
+    \item Los datos históricos sobre las mediciones podrán ser consultados a través de la interfaz web y esta no será multi usuario.
     \item Se desarrollará un sistema que resuelva las necesidades del rancho El sufrido.
 \end{itemize}
 
