--- a/protocolo/capitulos/marco_teorico.tex
+++ b/protocolo/capitulos/marco_teorico.tex
@@ -20,7 +20,7 @@
 % aqui lo que importa es la informacion, por lo que s eponen al final.
 
 
-\subsection{Marco teórico}
+% \subsection{Marco teórico}
 
 
 % 1. Agricultura de precision
@@ -34,10 +34,12 @@
 %     Intro (teoria del control, control automatico, control difuso)
 %     3.1 Logica difusa
 
-\subsubsection{API REST}
-\subsubsection{Metodología ágil} % como se explica que es aqui ya no hay que explicar lo que es en la metodologia 
+% \subsubsection{API REST}
+% \subsubsection{Metodología ágil} % como se explica que es aqui ya no hay que explicar lo que es en la metodologia 
 
 \subsection{Marco tecnológico}
+
+A continuación se presentan las tecnologías que se utilizarán para desarrollar el proyecto:
 
 \subsubsection{Raspberry pi}
 Un \textit{raspberry pi} es una computadora de bajo costo del tamaño de una tarjeta de crédito. Fue creada por la fundación Raspberry Pi, con el objetivo de fomentar la enseñanza de la computación y la programación \cite{what_is_raspberry}.
@@ -65,7 +67,7 @@ Modem celular diseñado para proveer de conectividad a internet (2G/3G/LTE-Cat-M
 \textit{Framework} minimalista para desarrollo de APIs REST en Python. Es uno de los \textit{frameworks} más rápidos disponibles para Python. Otra ventaja es que permite crear documentación compatible con el estándar OpenAPI automáticamente \cite{fastapi}.
 
 \subsubsection{NGINX}
-Servidor HTTP y de \textit{proxy} inverso utilizado mayormente por su capacidad de mantener en caché peticiones comúnes y balancear carga. Además, es capaz de funcionar como un servidor \textit{proxy} para servidores de correo (IMAP, POP, SMTP). Debido a su arquitectura escalable y su capacidad de actuar como un \textit{proxy} inverso, este servidor es utilizado comúnmente como un frente para otros servidores que no son tan eficientes. En estos escenarios es donde brilla su capacidad de balancear carga al poder enviar peticiones a distintos servidores, dependiendo de la carga que tengan en el momento \cite{nginx}.
+Servidor HTTP y de \textit{proxy} inverso utilizado mayormente por su capacidad de mantener en caché peticiones comúnes y balancear carga. Además, es capaz de funcionar como un servidor \textit{proxy} para servidores de correo (IMAP, POP, SMTP). Debido a su arquitectura escalable y su capacidad de actuar como un \textit{proxy} inverso, este servidor es utilizado comúnmente como un frente para otros servidores que no son tan eficientes. En estos escenarios es donde su capacidad de balancear carga al poder enviar peticiones a distintos servidores, dependiendo de la carga que tenga cada uno en el momento, lo diferencia de los demás servidores HTTP \cite{nginx}.
 
 \subsubsection{PM2}
 Administrador de procesos que ayuda a mantener servidores de aplicaciones en línea. Se desarrolló inicialmente para administrar servidores de Node.js, sin embargo, es capaz de administrar aplicaciones o procesos codificados en cualquier lenguaje \cite{pm2_landing}.
