--- a/protocolo/capitulos/metodologia.tex
+++ b/protocolo/capitulos/metodologia.tex
@@ -1,6 +1,6 @@
 \section{Metodología}
 
-Para el desarrollo de este proyecto se utilizará la metodología ágil. La razón por la que decidió utilizar esta estrategia de desarrollo sobre otras metodologías lineales (como la metodología de casacada) es que soporta el trabajo simultáneo de varias etapas del desarrollo de software. De esta manera, se puede diseñar, desarrollar y probar en pequeños ciclos iterativos hasta que se esté contento con la funcionalidad \cite{what_is_agile_meth}. Este proyecto se dividirá en los siguientes puntos:
+Para el desarrollo de este proyecto se utilizará la metodología ágil. La razón por la que decidió utilizar esta estrategia de desarrollo sobre otras metodologías lineales (como la metodología de casacada) es que soporta el trabajo simultáneo de varias etapas del desarrollo de software. De esta manera, se puede diseñar, desarrollar y probar en pequeños ciclos iterativos hasta que la funcionalidad satisfaga los objetivos definidos \cite{what_is_agile_meth}. Este proyecto se dividirá en los siguientes puntos:
 
 \begin{itemize}
 	
