--- a/protocolo/capitulos/objetivos.tex
+++ b/protocolo/capitulos/objetivos.tex
@@ -1,5 +1,5 @@
 \section{Objetivo general}
-Desarrollar un sistema de bajo costo para controlar y monitorear el clima de un invernadero, ubicado en el rancho El Sufrido, Samalayuca, utilizando técnicas de lógica difusa.
+Desarrollar un sistema de bajo costo para monitorear y controlar el riego y el clima de un invernadero, ubicado en el rancho El Sufrido, Samalayuca, utilizando técnicas de lógica difusa.
 
 \subsection{Objetivos específicos}
 \begin{itemize}
