--- a/protocolo/capitulos/planteamiento.tex
+++ b/protocolo/capitulos/planteamiento.tex
@@ -2,16 +2,20 @@
 
 \subsection{Antecedentes}
 
+La comunicación inalámbrica entre sistemas ha cambiado los estándares de comunicación al día de hoy y la agricultura no se ha quedado atrás. "Para incrementar la eficiencia, productividad y reducir la intervención humana, tiempo y costo existe una necesidad de prestar atención a una nueva tecnología llamada Internet de las Cosas (\textit{IoT} por sus siglas en inglés)" \cite{agriculture_automation_review}. El IoT es la red de dispositivos que adquieren y actúan sobre información sin la necesidad de que un humano intervenga \cite{agriculture_automation_review}. 
+
+Los principales componentes de un sistema basado en \textit{IoT} se pueden dividir en 4 capas: dispositivos, red, servicios y aplicación. El \textit{hardware} a implementar es de suma importancia debido a que impacta directamente el costo de la implementación y restringe las tecnologías disponibles. Entre los dispositivos más utilizados están los diferentes Arduinos, Raspberry Pis y el microcontrolador ESP. Los datos obtenidos a través de estos dispositivos son (en su mayoría) enviados a una ubicación central a través de una red alámbrica o inalámbrica. Los principales protocolos de red implementados en las redes inalámbricas son: Wi-Fi, Bluetooth, Zigbee y LoRaWAN \cite{systematicreviewiot}. 
+
 % red inalambrica de bajo costo para el monitoreo de una plantación de olivos
 En \cite{olive_orchard_monitorization} se implementó una red inalámbrica de sensores de bajo costo para monitorear la temperatura, humedad y concentración de gases del ambiente, además de la humedad del suelo en una plantación de olivos. Se utilizó el sensor DHT 11 para monitorear la temperatura y humedad del ambiente, un higrómetro para medir la humedad del suelo y un MQ-135 para detectar gases nocivos (CO2, amoniaco, benzeno, alcohol y humo del fuego). Cada nodo de esta red cuenta con los sensores para realizar las lecturas mencionadas, un microcontrolador (ESP8266) y una antena para habilitar la comunicación mediante el protocolo LoRaWAN, todo alimentado por celdas fotovoltaicas. Para el monitoreo de las lecturas, se desarrollaron una aplicación móvil y una interfaz web que muestran los datos en tiempo real.
 
-Es importante monitorear de forma separada la humedad del ambiente como la humedad del suelo debido a que estas no están correlacionadas. Ambas se relacionan a enfermedades y plagas, sin embargo, la humedad del ambiente influye en la aparición de enfermedades y la humedad del suelo en la aparición de plagas. También es muy valioso contar con mediciones de temperatura cerca del cultivo. De esta manera se tienen datos más precisos que los que proveen los sitios/aplicaciones meteorológicas \cite{olive_orchard_monitorization}.
+Es importante monitorear de forma separada la humedad del ambiente y la humedad del suelo debido a que estas no están correlacionadas. Ambas se relacionan a enfermedades y plagas, sin embargo, la humedad del ambiente influye en la aparición de enfermedades y la humedad del suelo en la aparición de plagas. También es muy valioso contar con mediciones de temperatura cerca del cultivo. De esta manera se tienen datos más precisos que los que proveen los sitios/aplicaciones meteorológicas \cite{olive_orchard_monitorization}.
 
 % red inalambrica de bajo costo para monitorear gases de invernadero
-Asimismo, en \cite{wsn_greenhouse_gases}, se desarrolló una red inalámbrica de sensores. Sin embargo, esta vez se utilizó para monitorear la temperatura y la concentración de gases dentro de un invernadero. La red consistió de dos nodos y una computadora central, comunicándose a través del protocolo ZigBee. Los nodos de la red consisten de un sensor de temperatura, sensores de monóxido de carbono, dióxido de carbono y metano para el monitoreo de gases, un transmisor ZigBee y un GPS (integrado en el transmisor). Ambos nodos fueron capaces de realizar lecturas de los sensores gracias un microcontrolador (Arduino uno). La computadora central consistió del mismo microcontrolador y un recibidor del protocolo ZigBee para recolectar los datos de los nodos. Estos datos se guardan en una base de datos de MySQL. El monitoreo de los datos se realiza en tiempo real a través de una página web.
+Asimismo, en \cite{wsn_greenhouse_gases}, se desarrolló una red inalámbrica de sensores. Sin embargo, esta vez se utilizó para monitorear la temperatura y la concentración de gases dentro de un invernadero. La red consistió de dos nodos y una computadora central, comunicándose a través del protocolo ZigBee. Los nodos de la red consisten de un sensor de temperatura, sensores de monóxido de carbono, dióxido de carbono y metano para el monitoreo de gases, un transmisor ZigBee y un GPS (integrado en el transmisor). Ambos nodos obtienen los datos sensados por los sensores utilizando un microcontrolador (Arduino uno). La computadora central consistió del mismo microcontrolador y un recibidor del protocolo ZigBee para recolectar los datos de los nodos. Estos datos se guardan en una base de datos de MySQL. El monitoreo de los datos se realiza en tiempo real a través de una página web.
 
 % sistema de bajo costo con logica difusa
-En la Universidad de Magdalena, Colombia se creó un sistema de bajo costo para monitoreo y control remoto de un invernadero utilizando lógica difusa \cite{low_cost_fuzzy_logic_greenhouse}. La utilización de lógica difusa en sistemas de control permite traducir variables a conjuntos previamente definidos que contienen la terminología difusa como muy frío, frío, caliente, muy caliente, etcétera. Gracias a esta traducción se pueden tomar acciones más precisas para realizar el control \cite{agriculture_automation_review}. El algoritmo difuso se implementó en un microcontrolador (Arduino Mega) para tomar acciones de control sobre la temperatura y humedad del ambiente, humedad del suelo e iluminación. Además, se diseño un sitio web para realizar el monitoreo y poder tomar acciones que sobre escriban a las decisiones tomadas por el sistema. Se probó la efectividad de la lógica difusa para controlar sistemas no lineales, además de optimizar el uso de recursos en un 
+En la Universidad de Magdalena, Colombia se creó un sistema de bajo costo para monitoreo y control remoto de un invernadero utilizando lógica difusa \cite{low_cost_fuzzy_logic_greenhouse}. La utilización de lógica difusa en sistemas de control permite traducir variables a conjuntos previamente definidos que contienen la terminología difusa como muy frío, frío, caliente, muy caliente, etcétera. Gracias a esta traducción se pueden tomar acciones más precisas para realizar el control \cite{agriculture_automation_review}. El algoritmo difuso se implementó en un microcontrolador (Arduino Mega) para tomar acciones de control sobre la temperatura y humedad del ambiente, humedad del suelo e iluminación. Además, se diseño un sitio web para realizar el monitoreo y poder tomar acciones que sobreescriban a las decisiones tomadas por el sistema. Se probó la efectividad de la lógica difusa para controlar sistemas no lineales, además de optimizar el uso de recursos en un 
 invernadero \cite{low_cost_fuzzy_logic_greenhouse}.
 
 % sistema de control para un cultivo hidroponico con logica difusa
