--- a/protocolo/capitulos/propuesta_solucion.tex
+++ b/protocolo/capitulos/propuesta_solucion.tex
@@ -4,7 +4,7 @@ Se desarrollará un sistema de bajo costo para monitorear y controlar el clima d
 
 El monitoreo se basará en una red inalámbrica de sensores. Esta red estará compuesta de una computadora central y nodos que realizarán las lecturas de los distintos sensores y enviarán los datos a través de Wi-Fi a la computadora central. Esta computadora estará encargada de actuar como punto de acceso para todos los nodos, siendo la única con conexión a internet. 
 
-Esta será un \textit{raspberry pi} 4, estará encargada de recibir los datos, procesarlos, filtrarlos y enviarlos a un servidor en la nube. En esta computadora también se realizará el control difuso del riego y del clima, tomando decisiones a partir de las lecturas de sensores y las reglas heurísticas previamente definidas. Este control podrá ser sobre escrito a través de la interfaz de usuario, conservando así total control sobre el sistema.
+Esta será un \textit{raspberry pi} 4, estará encargada de recibir los datos, procesarlos, filtrarlos y enviarlos a un servidor en la nube utilizando un módem celular como proveedor de internet. En esta computadora también se realizará el control difuso del riego y del clima, tomando decisiones a partir de las lecturas de sensores y las reglas heurísticas previamente definidas. Este control se hará utilizando un relevador y podrá ser sobre escrito a través de la interfaz de usuario, conservando así total control sobre el sistema.
 
 Existirán 2 variantes de nodos. Ambas variantes contarán con un microcontrolador Node MCU-ESP8266, el cual estará encargado de sensar un sensor de temperatura y humedad (DHT22), un sensor de iluminancia (Adafruit 4162 VEML7700) y, dependiendo de la variante, un sensor capacitivo de humedad del suelo. Los nodos estarán dispersos uniformemente dentro del invernadero, los que cuenten con sensor de humedad del suelo estarán a nivel del suelo y los que no, estarán a una altura en la que el cultivo no cubra el sensor de iluminancia.
 
