--- a/protocolo/main.tex
+++ b/protocolo/main.tex
@@ -14,7 +14,7 @@
 %FIXME: todas las figuras se citan con F mayuscula
 \date{\today}
 % el titulo debe ir orientado a que sera en la region de samalayuca
-\title{[TÍTULO DEL PROYECTO DE INVESTIGACIÓN]}
+\title{Sistema de bajo costo para monitorear y controlar un invernadero utilizando técnicas de lógica difusa}
 \author{Guillermo Joaquín Álvarez Ordóñez} 
 
 \begin{document}
